[tool.poetry]
name = "Kassiopeia"
version = "0.1.0"
description = "Detection of malicious domains via a large scale network analysis"
authors = ["Matej Kerekrety <matej.kerekrety@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.6.0"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
notebook = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
